--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://localhost:8080/manager/text</url>
+                    <url>http://123.56.132.111/manager/text</url>
                     <server>123.56.132.111</server>
                     <path>/${project.artifactId}</path>
                 </configuration>
