--- a/pom.xml
+++ b/pom.xml
@@ -590,6 +590,14 @@
             <artifactId>xmlbeans</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.zhuozhengsoft</groupId>
+            <artifactId>pageoffice</artifactId>
+            <version>2.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/webapp/WEB-INF/lib/pageoffice.jar</systemPath>
+        </dependency>
     </dependencies>
 
 </project>
