--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,19 @@ out/
 /.classpath
 
 /.project
+/.myumldata
+/.travis.yml
+/assembly-standalone.xml
+/eclipse-formatter-config.xml
+/jalopy.xml
+/standalone.bat
+/webdefault.xml
+/xhf.eml
+/xhf.iml
+
 /xthena.store
+
+
 
 *.jar
 *.war
