--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ application.database.type=mysql
 db.default.driverClassName=com.mysql.jdbc.Driver
 db.default.url=jdbc\:mysql\://localhost\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true&characterEncoding\=utf-8
 #db.default.url=jdbc\:mysql\://115.29.77.6\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true&characterEncoding\=utf-8
-#db.default.username=root
+db.default.username=root
 #db.default.password=xthena!@#$QWER
 db.default.password=
 #db.default.password=xthena!@#$QWER
