增加监理图片上传

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
-upload.dir=D\:\\dev\\tomcat-7\\webapps\\xhf\\s\\upload\\
-download.url=http\://localhost\:8080/xhf/s/upload/
+upload.dir=/s/upload/
+download.url=/xhf/s/upload/
 
 #remind pool task
 remind.pool.corePoolSize=30
