修复文件上传路径保存bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,8 @@ db.default.url=jdbc\:mysql\://localhost\:3306/xhf?zeroDateTimeBehavior\=convertT
 #db.default.url=jdbc\:mysql\://115.29.77.6\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true&characterEncoding\=utf-8
 db.default.username=root
 #db.default.password=xthena!@#$QWER
-db.default.password=
+db.default.password=xthena!@#$xhf
+#db.default.password=
 db.default.validationQuery=select 1
 
 # ============================================================================
