--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,13 @@ db.default.driverClassName=com.mysql.jdbc.Driver
 db.default.url=jdbc\:mysql\://localhost\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true&characterEncoding\=utf-8
 #db.default.url=jdbc\:mysql\://115.29.77.6\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true&characterEncoding\=utf-8
 db.default.username=root
+# 123
 #db.default.password=xthena!@#$QWER
+# 115
 #db.default.password=xthena!@#$xhf
+# local
 db.default.password=
+
 db.default.validationQuery=select 1
 
 # ============================================================================
