修复工程管理监理部新建人员bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ db.default.username=root
 # 123
 #db.default.password=xthena!@#$QWER
 # 115
-#db.default.password=xthena!@#$xhf
+db.default.password=xthena!@#$xhf
 # local
-db.default.password=
+#db.default.password=
 
 db.default.validationQuery=select 1
 
