修改数据库表名大小写内容

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,16 +15,18 @@ application.database.type=mysql
 # ============================================================================
 # db
 # ============================================================================
+
 db.default.driverClassName=com.mysql.jdbc.Driver
-db.default.url=jdbc\:mysql\://localhost\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true&characterEncoding\=utf-8
-#db.default.url=jdbc\:mysql\://115.29.77.6\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true&characterEncoding\=utf-8
+db.default.url=jdbc\:mysql\://123.56.132.111\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true&characterEncoding\=utf-8
+#db.default.url=jdbc\:mysql\://115.29.77.6\:3306/xhf?zeroDateTimeBehavior\=convertToNull&useUnicode\=true
+#&characterEncoding\=utf-8
 db.default.username=root
 # 123
-#db.default.password=xthena!@#$QWER
+db.default.password=xthena!@#$QWER
 # 115
 #db.default.password=xthena!@#$xhf
 # local
-db.default.password=
+#db.default.password=
 
 db.default.validationQuery=select 1
 
@@ -138,6 +140,7 @@ security.passwordencoder.type=md5
 security.passwordencoder.salt=lemon
 security.defaultAppId=0
 security.resource.debug=false
+
 security.user.fetcher.type=database
 security.user.fetcher.url=http://localhost:8080/xthena-web-auth/rs/authority/user
 security.url.fetcher.type=database
